# tobii-eye-tracking

./: .gitignore  CMakeLists.txt  PROGRAMS_OVERVIEW.md  README.md  build.bat  build_sets.bat  download_sdk_info.txt  run_sets.bat
gaze_ipc_demo/: .gitignore  CMakeLists.txt  README.md  README_Windows.md  build.sh  build_windows.bat  setup_tobii.sh
gaze_ipc_demo/include/: ring.hpp
gaze_ipc_demo/src/: consumer.cpp  consumer_win.cpp  producer.cpp  producer_win.cpp
src/: gaze_recorder.cpp  main.cpp  main_game_integration.cpp  tobii_pro_overlay.cpp  tobii_pro_recorder.cpp  tobii_pro_research.cpp  tobii_pro_sequence.cpp  tobii_pro_sequence_all.cpp  tobii_pro_sequence_set1.cpp  tobii_pro_sequence_set2.cpp  tobii_pro_sequence_set3.cpp  tobii_pro_sequence_set4.cpp
